TAG: strainload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: strainload-6-0-15-3
DATE: 07/08/2020
STAFF: lec
CHANGES: TR12332/IMSR/Strains
check allele is None

TAG: strainload-6-0-15-2
DATE: 05/22/2020
STAFF: lec
CHANGES: TR12332/IMSR/Strains
PRB_Strain_Marker/marker may be null

TAG: strainload-6-0-15-1
DATE: 01/29/2020
STAFF: lec
CHANGES: tr13007-genotye merge

TAG: strainload-6-0-14-3
TAG: strainload-6-0-14-2
DATE: 07/31/2019
STAFF: lec 
TR12232/added db.setTrace()
move BCP to python

TAG: strainload-6-0-14-1
DATE: 04/03/2019
STAFF: lec 
TR12963/teleuse-to-mgd_java_api

TAG: strainload-6-0-12-9
DATE: 04/02/2018
STAFF: lec
CHANGES: TR12662/GMC/autosequence changes

TAG: strainload-6-0-12-8
TAG: strainload-6-0-12-7
TAG: strainload-6-0-12-6
TAG: strainload-6-0-12-5
TAG: strainload-6-0-12-4
TAG: strainload-6-0-12-3
TAG: strainload-6-0-12-2
DATE: 03/15/2018, 03/23/2018
STAFF: lec
CHANGES: TR12332/IMSR/Strains

TAG: strainload-6-0-12-1
DATE: 03/07/2018
STAFF: lec
CHANGES: TR12662/GMC/autosequence changes

TAG: strainload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: strainload-6-0-4-1
DATE: 04/29/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"
3) tested using htmpload/lacz

TAG: strainload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES: TR11750
1) strainKOMPload.py
updated for Postgres; strainload.py & strainallelelload.py will also need to
be done, when they are needed

TAG: strainload-5-1-9-1
DATE: 08/28/2014
STAFF: sc
CHANGES: TR11775
1) strainload.py - update strain type query to use _Vocab_key 55
2) strainKOMPload.py - ditto

TAG: strainload-5-1-8-1
DATE: 04/09/2014
STAFF: lec
CHANGES: TR11623/EMMA strains

TAG: strainload-5-1-4-6
TAG: strainload-5-1-4-5
TAG: strainload-5-1-4-4
TAG: strainload-5-1-4-3
TAG: strainload-5-1-4-2
DATE: 10/18/2013
STAFF: lec
CHANGES: TR11490; fix TR11247/geneticBackground bug
