@@ -1,3 +1,9 @@
+TAG: strainload-6-0-16-2
+DATE: 11/30/2020
+STAFF: lec
+CHANGES: TR12332/load IMSR strains to MGI
+GENO2020, GTP2020, KMPC2020, MMRRC2020, RIKEN2020, SMOC2020, VCMR2020
+
 TAG: strainload-6-0-16-1
 DATE: 08/21/2020
 STAFF: sc
